fix hero content wrap height in contact page

--- a/src/styles/_contact.less
+++ b/src/styles/_contact.less
@@ -2,6 +2,13 @@
 // CONTACT PAGE
 // ==========================================================================
 
+.contact-page-hero {
+  .hero-content-wrap {
+    height: 29.875rem;
+    min-height: unset;
+  }
+}
+
 .contact-intro-section {
   padding-top: var(--spacing-small-2);
   padding-bottom: var(--spacing-small-2);
